added python-dotenv and OPEN-AI key

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = "^3.12"
 dependencies = [
     "deepeval (>=0.21.0)",
-    "openai (>=1.0.0)"
+    "openai (>=1.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)"
 ]
 
 
